# CSnake

./: .gitignore  game_doc.md  meson.build
include/: globals.h  graphics.h  input.h  map.h  snake.h
src/: graphics.c  hash_table.c  input.c  main.c  map.c  snake.c
